--- a/html/index.html
+++ b/html/index.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="panel-footer footer-default footerBottom">
                         <div class="row">
-                            <div class="col-md-12 text-center">paging</div>
+                            <div class="col-md-12 text-center">1  2  3  4  ...</div>
                         </div>
                     </div>
                 </div>
